HTTProute-for-addons/Grafana/HTTProute-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana-route-https
  namespace: observability
spec:
  hostnames:
   - "grafana.quanldl.click"
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: app-alb-gateway
    namespace: default
    sectionName: https
  rules:
  - matches:
        - path:
            type: PathPrefix
            value: /
    backendRefs:
    - name: kube-prometheus-stack-grafana
      port: 80
